--- a/index.html
+++ b/index.html
@@ -540,9 +540,9 @@
             </li>
           </ul>
         </div>
-        <div class="footer-subscribe-form">
+        <div class="footer-subscribe-form-wrapper">
           <p class="footer-subscribe-form-title">Підпишіться на розсилку</p>
-          <form class="footer-subscribe-form-wrapper">
+          <form class="footer-subscribe-form">
             <label class="footer-subscribe-input-field">
               <input
                 type="email"
