--- a/index.html
+++ b/index.html
@@ -643,10 +643,9 @@
               </svg>
             </span>
           </label>
-          <label class="modal-form-field">
+          <label class="modal-form-textarea">
             <span class="modal-form-input-desc">Коментар</span>
             <textarea
-              name=""
               class="modal-form-comment"
               placeholder="Введіть текст"
               name="comment"
